crates/preprocessor/tests/snapshots/main__include_directive_1-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      20,
      0,
      20
    ]
  ],
  "expanded_symbols": []
}
