crates/preprocessor/tests/snapshots/main__include_directive_2-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 673
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      22,
      0,
      22
    ],
    [
      22,
      22,
      23,
      23
    ]
  ],
  "expanded_symbols": []
}
