crates/preprocessor/tests/snapshots/main__include_directive_2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 673
expression: res.preprocessed_text()
---
#include <sourcemod\
>

