crates/preprocessor/tests/snapshots/main__include_directive_3.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 805
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#include <sourcemod>

