crates/preprocessor/tests/snapshots/main__macro_expansion_1-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 576
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      11,
      12,
      11,
      12
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      13,
      14,
      13,
      14
    ],
    [
      14,
      15,
      14,
      15
    ],
    [
      15,
      16,
      15,
      16
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      17,
      18,
      17,
      18
    ],
    [
      19,
      20,
      19,
      20
    ],
    [
      20,
      21,
      20,
      21
    ],
    [
      22,
      23,
      22,
      23
    ],
    [
      24,
      25,
      24,
      25
    ],
    [
      25,
      26,
      25,
      26
    ],
    [
      27,
      30,
      27,
      30
    ],
    [
      31,
      34,
      31,
      34
    ],
    [
      35,
      36,
      35,
      36
    ],
    [
      41,
      42,
      37,
      38
    ],
    [
      44,
      45,
      41,
      42
    ],
    [
      46,
      47,
      42,
      43
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 37,
        "end": 40
      },
      "expanded_range": {
        "start": 36,
        "end": 42
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
