crates/preprocessor/tests/snapshots/main__macro_expansion_1.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 640
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO(%0,%1) %0 + %1
int foo = 1 + 2;

