crates/preprocessor/tests/snapshots/main__macro_expansion_2-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 585
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      11,
      12,
      11,
      12
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      13,
      14,
      13,
      14
    ],
    [
      14,
      15,
      14,
      15
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      17,
      18,
      17,
      18
    ],
    [
      19,
      20,
      19,
      20
    ],
    [
      20,
      21,
      20,
      21
    ],
    [
      21,
      22,
      21,
      22
    ],
    [
      23,
      26,
      23,
      26
    ],
    [
      27,
      30,
      27,
      30
    ],
    [
      31,
      32,
      31,
      32
    ],
    [
      37,
      38,
      33,
      34
    ],
    [
      39,
      40,
      37,
      38
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 33,
        "end": 36
      },
      "expanded_range": {
        "start": 32,
        "end": 37
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
