crates/preprocessor/tests/snapshots/main__macro_expansion_2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 652
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO(%0) %0 %%2
int foo = 2 %2;

